code/objects/Gateway__c.object
<CustomObject>
    <fields>
        <fullName>CustomSMSServiceHandler__c</fullName>
        <label>Custom SMSServiceHandler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomWebServiceHandler__c</fullName>
        <label>Custom WebServiceHandler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplaySequence__c</fullName>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwilioAccountSid__c</fullName>
        <label>Twilio AccountSid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwilioAuthToken__c</fullName>
        <label>Twilio AuthToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebHookIdentifier__c</fullName>
        <label>WebHook Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Gateway</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PhoneNumber__c</columns>
        <columns>WebHookIdentifier__c</columns>
        <columns>DisplaySequence__c</columns>
        <columns>Inactive__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Gateway Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gateways</pluralLabel>
    <recordTypes>
        <fullName>Custom</fullName>
        <active>true</active>
        <description>Custom Gateway</description>
        <label>Custom</label>
    </recordTypes>
    <recordTypes>
        <fullName>Twilio</fullName>
        <active>true</active>
        <description>Twilio Gateway</description>
        <label>Twilio</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>